# ota-cli

./: .gitignore  Cargo.toml
src/: command.rs  config.rs  error.rs  http.rs  lib.rs
src/api/: auth_plus.rs  campaigner.rs  director.rs  registry.rs  reposerver.rs
