[package]
name = "ota"
version = "0.1.0"
authors = ["Shaun Taheri <shaun.taheri@here.com>"]
publish = false
edition = "2018"

[dependencies]
clap = "2"
dirs = "1"
log = "0.4"
pretty_env_logger = "0.4"
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
toml = "0.4.10"
url = { version = "2", features = ["serde"] }
urlencoding = "1"
uuid = { version = "0.8", features = ["serde"] }
zip = "0.5"
